--- a/css/style.less
+++ b/css/style.less
@@ -4,7 +4,7 @@
 html, body {
   margin:0;
   padding:0 3px;
-j width:100%;
+  width:100%;
   height:100%;
   background:#000;
   color: @themeColor;
@@ -66,7 +66,7 @@ j width:100%;
   }
   .result {
     h1, h2, h3, h4, h5, h6, h7, h8 {
-      margin: 25px 0;
+      margin: 10px 0;
     }
     p {
       margin: 0;
